Simplify assertions in new Junit TAPI PCE tests
- use apropriate assertions to check for equality
- use the toList() method to collect stream output whenever possible
- remove some unnecessary logs, especially when lines in the source code
  are hardcoded

JIRA: TRNSPRTPCE-819
Change-Id: I7109670d035e18dce4a3c068145c2624e4c0c308
Signed-off-by: Gilles Thouenon <gilles.thouenon@orange.com>